# ayna-docker-template

./: .env.example  .gitignore  Makefile  PORT_REGISTRY.md  README.md  SPEC.md  UNIFIED_STANDARD.md  init.sh  pyproject.toml  validate.sh
caddy/: Caddyfile
compose/: dev.yml  prod.yml
docker/: api.Dockerfile  docs.Dockerfile  web.Dockerfile
scripts/: entrypoint.sh  poe_commands.py  update-template.sh
systemd/: myproject-api.service  myproject-beat.service  myproject-celery.service  myproject-web.service
